--- a/qingchuanghui2.0.7 2/qch/Info.plist
+++ b/qingchuanghui2.0.7 2/qch/Info.plist
@@ -124,6 +124,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
+		<string>voip</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
